--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
-    "express": "~4.14.0",
+    "express": "^4.14.1",
     "express-session": "^1.15.1",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.4",
